[package]
name = "rendezvous"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
parking_lot = "0.12.4"
ratatui = "0.29.0"
textwrap = "0.16.2"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
